renamed env variables as per create-react-app's liking; trying to get fetchGiphyList working

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_PATH=src/
 
 // NOTE: forgive me! This should be .gitignore'd, but for the sake of actually working out-of-the-box I'm keeping it public.
-GIPHY_API_KEY=Lmm3BH8vdl7yLRUaTOuEHmX9SV1M2NTv
-GIPHY_API_URL=api.giphy.com/v1/gifs/trending
+REACT_APP_GIPHY_API_KEY=Lmm3BH8vdl7yLRUaTOuEHmX9SV1M2NTv
+REACT_APP_GIPHY_API_URL=api.giphy.com/v1/gifs/trending
