--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "breakfast-gif",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://josephwilliams.github.io/breakfast_gif",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
@@ -17,6 +19,8 @@
     "superagent": "^3.8.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "NODE_PATH=src/ react-scripts start",
     "build": "NODE_PATH=src/ react-scripts build",
     "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
