--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "breakfast-gif",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://josephwilliams.github.io/breakfast_gif",
+  "homepage": "https://josephwilliams.github.io/breakfast_gif/",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "js-cookie": "^2.2.0",
